--- a/src/app/components/recordCard/recordCard.component.scss
+++ b/src/app/components/recordCard/recordCard.component.scss
@@ -114,7 +114,7 @@
           .novo-card {
             margin: 1rem;
             min-width: 25%;
-            min-height: 25%;
+            min-height: 20em !important;
 
             .numbers-container {
               display: flex;
@@ -174,6 +174,10 @@
 
   .low {
     color: $grapefruit;
+  }
+
+  .novo-card-min {
+    min-height: 20em;
   }
 
 }
